updated commit after deletiong

--- a/Update_product/Config/pyproject.toml
+++ b/Update_product/Config/pyproject.toml
@@ -4,7 +4,7 @@
 
 
 # This is the config file that python now uses in place of setup.py
-# pip can read this pyproject.toml just run what is below in the terminal
+# pip can read this pyproject.toml
 
 # python -m pip install .
 
@@ -14,11 +14,10 @@
         "setuptools",
         "wheel",
         'PySide6',
-        "python-json-logger",
-        "selenium",
-        "numpy",
-        "logging",
-        "helium",
-        "dotmap"
+        'python-json-logger',
+        'selenium',
+        'numpy',
+        'toml',
+        'helium'
+        # 'logging'
     ] # PEP 508 specifications.
-    # dotmap allows for using periods to reference dict objects https://stackoverflow.com/questions/2352181/how-to-use-a-dot-to-access-members-of-dictionary
